(library
  (name social)
  (modules social)
  (libraries
    core
    yojson
    uribuilder
    cohttp-lwt-unix)
  (preprocess (pps bisect_ppx)))

(library
  (name tweetparser)
  (modules tweetparser)
  (libraries
    core
    parks
    yojson)
  (preprocess (pps bisect_ppx)))

(library
  (name dbconnection)
  (modules dbconnection)
  (libraries
    core
    caqti
    caqti-lwt 
    caqti-driver-postgresql)
  (preprocess (pps bisect_ppx)))

(library
  (name uribuilder)
  (modules uribuilder)
  (libraries
    core
    cohttp-lwt-unix
    parks
    dbconnection
    lwt
    lwt_ppx
    caqti
    caqti-lwt 
    caqti-driver-postgresql)
  (preprocess (pps bisect_ppx)))

(library
  (name parks)
  (modules parks)
  (libraries
    core)
  (preprocess (pps bisect_ppx)))

(library
  (name dbmanager)
  (modules dbmanager)
  (libraries
    core
    yojson
    dbconnection
    tweetparser
    parks
    social
    lwt
    lwt_ppx
    caqti
    caqti-lwt 
    caqti-driver-postgresql
    cohttp-lwt-unix)
  (preprocess (pps ppx_jane bisect_ppx lwt_ppx ppx_deriving_yojson)))

(library
  (name activity)
  (modules activity)
  (libraries
    core
    yojson
    dbmanager
    ppx_deriving_yojson.runtime)
  (preprocess (pps ppx_jane bisect_ppx ppx_deriving_yojson)))

(executable
 (name api)
 (modules api)
 (libraries 
    social  
    opium
    activity
    dbmanager
    cohttp-lwt-unix 
    yojson))
